opam-version: "1.2"
name: "timer"
version: "0.1"
maintainer: "skcho <skcho@ropas.snu.ac.kr>"
author: "skcho <skcho@ropas.snu.ac.kr>"
homepage: "https://github.com/skcho/timer"
bug-reports: "https://github.com/skcho/timer/issues"
license: "Unlicense"
dev-repo: "https://github.com/skcho/timer.git"
build: [
  [make]
]
install: [make "install"]
remove: [make "uninstall"]
depends: "ocamlfind"
